# proximity-app

./: .gitmodules  Cargo.toml  Cross.toml  README.md  build.rs
scripts/: install.sh
src/: cli.rs  main.rs  protocol_bindings.rs
src/communication/: mod.rs
src/communication/uds/: mod.rs  server.rs
src/logic/: command.rs  mod.rs  recorder.rs
src/tracking/: history.rs  mod.rs
