[package]
name = "app"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"

[dependencies]

[dependencies.clap]
version = "4.6.1"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]

[build-dependencies]

[build-dependencies.bindgen]
version = "0.72.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
